[bdist_wheel]
universal = 1

[metadata]
name = keyrings.codeartifact
author = Joshua M. Keyes
author_email = joshua.michael.keyes@gmail.com
url = https://github.com/jmkeyes/keyrings.codeartifact
description = Automatically retrieve credentials for AWS CodeArtifact.
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =
    keyring
    boto3

[options.packages.find]
exclude =
    tests*
    build*
    dist*
    venv*

[options.extras_require]
testing =
    pytest >= 6
    pytest-cov
development =
    flake8
    black

[options.entry_points]
keyring.backends =
    AWS CodeArtifact = keyrings.codeartifact
